--- a/asset/scss/_globals-default.scss
+++ b/asset/scss/_globals-default.scss
@@ -1,18 +1,18 @@
 @import "util/util";
 
 $global-font-size: 100%;
-$global-width: rem-calc(1200);
+$global-width: rem-calc(1140);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
+  primary: #6b2c91,
   secondary: #767676,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
 );
-$light-gray: #e6e6e6;
+$light-gray: #ececed;
 $medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
+$dark-gray: #393a3c;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
