--- a/asset/scss/_globals-inkwell.scss
+++ b/asset/scss/_globals-inkwell.scss
@@ -1,5 +1,5 @@
 @import "util/util";
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,700,700i|Playfair+Display:400,400i&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 $foundation-palette: (
   primary: #ffcc00,
@@ -9,4 +9,4 @@ $foundation-palette: (
   alert: #cc4b37,
 );
 $global-font-size: 18px;
-$body-font-family: 'EB Garamond', serif;
+$body-font-family: 'Open Sans', sans-serif;
