--- a/asset/scss/_globals-seafoam.scss
+++ b/asset/scss/_globals-seafoam.scss
@@ -1,5 +1,5 @@
 @import "util/util";
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,900,900i&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 $foundation-palette: (
   primary: #007a76,
@@ -8,4 +8,4 @@ $foundation-palette: (
   warning: #ffae00,
   alert: #cc4b37,
 );
-$body-font-family: 'Source Sans Pro', sans-serif;
+$body-font-family: 'Open Sans', sans-serif;
