Updated header and footer
Imported old UoM stylesheets for both header and footer

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -11,11 +11,12 @@ if (isset($stylesheet)) {
     $this->headLink()->prependStylesheet($this->assetUrl('css/default.css'));
 }
 $this->headLink()->prependStylesheet($this->assetUrl('css/iconfonts.css', 'Omeka'));
+$this->headLink()->prependStylesheet($this->assetUrl('css/uom-header.css'));
+$this->headLink()->prependStylesheet($this->assetUrl('css/uom-footer.css'));
 $this->headScript()->prependFile($this->assetUrl('vendor/foundation/foundation.min.js'));
 $this->headScript()->prependFile($this->assetUrl('js/global.js', 'Omeka'));
 $this->headScript()->prependFile($this->assetUrl('vendor/jquery/jquery.min.js', 'Omeka'));
 $this->trigger('view.layout');
-$this->jsTranslate();
 $title = $this->pageTitle($site->title());
 $userBar = $this->userBar();
 
@@ -84,13 +85,69 @@ endif;
             <div id="content" role="main">
                 <?php echo $this->content; ?>
             </div>
-            <footer>
-                <?php if ($footerContent = $this->themeSetting('footer')): ?>
-                <?php echo $footerContent; ?>
-                <?php else: ?>
-                    <?php echo $this->translate('Powered by Omeka S'); ?>
-                <?php endif; ?>
-            </footer>
+            <footer class="footerContainer">							
+                            <div class="row tripleVertPadding">
+                                
+                                <div class="eightcol">
+                                    <div class="footerLogos">
+                        
+                                        <img src="https://www.library.manchester.ac.uk/assets/images/design/national-research-libraries.png" height="63" alt="National Research Libraries">											
+                                        <p>The University of Manchester Library is one of five National Research Libraries</p>
+                        
+                                    </div>
+                                </div>
+                                
+                                <div class="fourcol last">
+                                    <h2>Connect with us</h2>
+                                    <ul class="inlineList footer-socialIcons">
+                                        
+                                        <li><a href="https://www.facebook.com/pages/The-University-of-Manchester-Library/25777209922">
+                                            <img class="lazy" src="https://www.library.manchester.ac.uk/assets/images/design/icon-facebook-large.png" width="40" height="40" data-original="/assets/images/design/icon-facebook-large.png" alt="Facebook page for The University of Manchester Library">
+                                            <noscript><img class="" src="https://www.library.manchester.ac.uk/assets/images/design/icon-facebook-large.png" width="40" height="40" alt="Facebook page for The University of Manchester Library"></noscript>
+                                            </a>
+                                        </li>
+                                        <li><a href="https://twitter.com/UoMLibrary">
+                                            <img class="lazy" src="https://www.library.manchester.ac.uk/assets/images/design/icon-twitter-large.png" width="40" height="40" data-original="/assets/images/design/icon-twitter-large.png" alt="Twitter page for The University of Manchester Library">
+                                            <noscript><img class="" src="https://www.library.manchester.ac.uk/assets/images/design/icon-twitter-large.png" width="40" height="40" alt="Twitter page for The University of Manchester Library"></noscript>
+                                            </a>
+                                        </li>
+                                        <li><a href="https://www.instagram.com/uomlibrary/">
+                                            <img class="lazy" src="https://www.library.manchester.ac.uk/assets/images/design/icon-instagram.png" width="40" height="40" data-original="/assets/images/design/icon-instagram.png"  alt="Instagram page for The University of Manchester Library">
+                                            <noscript><img class="" src="https://www.library.manchester.ac.uk/assets/images/design/icon-instagram.png" width="40" height="40" alt="Instagram page for The University of Manchester Library"></noscript>
+                                            </a>
+                                        </li>
+                                        <li><a href="https://www.youtube.com/user/UoMLibrary">
+                                            <img class="lazy" src="https://www.library.manchester.ac.uk/assets/images/design/icon-youtube-large.png" width="40" height="40" data-original="/assets/images/design/icon-youtube-large.png"  alt="YouTube page for The University of Manchester Library">
+                                            <noscript><img class="" src="https://www.library.manchester.ac.uk/assets/images/design/icon-youtube-large.png" width="40" height="40" alt="YouTube page for The University of Manchester Library"></noscript>
+                                            </a>
+                                        </li>
+                                        <li><a href="https://www.linkedin.com/showcase/the-university-of-manchester-library">
+                                            <img class="lazy" src="https://www.library.manchester.ac.uk/assets/images/design/icon-linkedin.png" width="40" height="40" data-original="/assets/images/design/icon-linkedin.png"  alt="LinkedIn page for The University of Manchester Library">
+                                            <noscript><img class="" src="https://www.library.manchester.ac.uk/assets/images/design/icon-linkedin.png" width="40" height="40" alt="LinkedIn page for The University of Manchester Library"></noscript>
+                                            </a>
+                                        </li>													
+                                    </ul>
+                                </div>
+                            </div>
+                            
+                            <hr>
+                                
+                            <div class="row singleVertPadding">
+                                <div class="twelvecol">
+                                    <ul class="inlineList">
+                                        <li><a href="https://www.manchester.ac.uk/disclaimer/">Disclaimer</a> /</li>
+                                                    <li><a href="https://www.manchester.ac.uk/discover/privacy-information/data-protection/">Data Protection</a> /</li>
+                                                    <li><a href="https://www.manchester.ac.uk/copyright/">Copyright notice</a> /</li>
+                                                    <li><a href="https://www.library.manchester.ac.uk/accessibility/library-help/">Web accessibility</a> /</li>
+                                                    <li><a href="https://www.manchester.ac.uk/discover/privacy-information/freedom-information/">Freedom of information</a> /</li>
+                                                    <li><a href="https://www.manchester.ac.uk/discover/governance/charitable-status/">Charitable status</a> /</li>
+                                      
+                                        <li>Royal Charter Number: RC000797</li>
+                                    </ul>
+                                </div>
+                            </div>
+                           
+                        </footer>
         </div>
         <script>
           $(document).foundation();
