Revised header colours

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -167,7 +167,7 @@ body.vertical-menu #user-bar ~ #content {
 }
 
 .dropdown.menu > li.is-dropdown-submenu-parent.active:hover > a {
-  background-color: $primary-color;
+  background-color: $dark-gray;
   color: #fff;
 }
 
