Revised primary colour; enabled prototype classes

--- a/asset/scss/_globals-default.scss
+++ b/asset/scss/_globals-default.scss
@@ -4,11 +4,12 @@ $global-font-size: 100%;
 $global-width: rem-calc(1140);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #6b2c91,
+  primary: #1779ba,
   secondary: #767676,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
+  uom-primary: #6b2c91,
 );
 $light-gray: #ececed;
 $medium-gray: #cacaca;
