--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -15,8 +15,8 @@ $this->headLink()->prependStylesheet($this->assetUrl('css/uom-header.css'));
 $this->headLink()->prependStylesheet($this->assetUrl('css/uom-footer.css'));
 $this->headScript()->prependFile($this->assetUrl('vendor/foundation/foundation.min.js'));
 $this->headScript()->prependFile($this->assetUrl('js/global.js', 'Omeka'));
-// $this->headScript()->prependFile($this->assetUrl('js/full-width.js'));
-$this->headScript()->prependFile($this->assetUrl('js/full-width-container.js'));
+//$this->headScript()->prependFile($this->assetUrl('js/full-width.js'));
+//$this->headScript()->prependFile($this->assetUrl('js/full-width-container.js'));
 $this->headScript()->prependFile($this->assetUrl('vendor/jquery/jquery.min.js', 'Omeka'));
 $this->trigger('view.layout');
 $title = $this->pageTitle($site->title());
@@ -154,6 +154,9 @@ endif;
         <script>
           $(document).foundation();
         </script>
-        <script src="/asset/js/full-width-container.js"></script>
+        <?php
+            echo $this->inlineScript()
+            ->prependFile($this->assetUrl('js/full-width-container.js'));
+        ?>
     </body>
 </html>
