--- a/view/common/block-layout/asset-hero-large.phtml
+++ b/view/common/block-layout/asset-hero-large.phtml
@@ -1,4 +1,5 @@
 <?php
+
 /**
  * @var \Laminas\View\Renderer\PhpRenderer $this
  * @var array $attachments Contains keys:
@@ -24,28 +25,26 @@ $escape = $plugins->get('escapeHtml');
 $escapeAttr = $plugins->get('escapeHtmlAttr');
 ?>
 
-<?php if (!empty($heading)): ?>
-<h2><?= $escape($heading) ?></h2>
+<?php if (!empty($heading)) : ?>
+    <h2><?= $escape($heading) ?></h2>
 <?php endif; ?>
 
 <?php if (!count($attachments)) return; ?>
 <?php $attachment = $attachments[array_rand($attachments)]; ?>
 <?php if (empty($attachment['asset'])) return; ?>
 
-<div class="full-width">
-<div class="hero-image hero-large <?= $escapeAttr($attachment['class']) ?>" style="background-image:url(<?= $attachment['asset']->assetUrl() ?>);">
-    <?php if ($attachment['caption']): ?>
-    <div class="grid-container grid-x">
-        <div class="cell small-8 medium-6">
-            <div class="medium-6 offset-3 margin-top-5">
-                <h2 class="h1 text-center"><?= $attachment['caption'] ?></h2>
-                <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : $attachment['url']; ?>
-                <?php if ($attachment['alt_link_title'] && $attachmentUrl): ?>
-                <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
-                <?php endif; ?>
+<div class="full-width margin-bottom-1">
+    <div class="hero-image image-large <?= $escapeAttr($attachment['class']) ?>" style="background-image:url(<?= $attachment['asset']->assetUrl() ?>);">
+        <?php if ($attachment['caption']) : ?>
+            <div class="grid-container grid-x">
+                <div class="cell small-10 medium-8">
+                    <h2 class="text-center"><?= $attachment['caption'] ?></h2>
+                    <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : $attachment['url']; ?>
+                    <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
+                        <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
+                    <?php endif; ?>
+                </div>
             </div>
-        </div>
+        <?php endif; ?>
     </div>
-    <?php endif; ?>
-</div>
 </div>
