Updated 'Resource Text' templates

--- a/view/common/block-layout/resource-text-side-menu.phtml
+++ b/view/common/block-layout/resource-text-side-menu.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text grid-x grid-padding-x full-width align-center padding-1">
+<div class="block media-text grid-x grid-padding-x align-center padding-1">
     <?php if (!empty($heading)): ?>
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
