--- a/view/common/block-layout/resource-text-metadata.phtml
+++ b/view/common/block-layout/resource-text-metadata.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text grid-x grid-padding-x full-width align-center padding-1">
+<div class="block media-text grid-x grid-padding-x full-width padding-1 align-spaced">
     <?php if (!empty($heading)): ?>
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
@@ -75,7 +75,35 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="text large-6 flex-container align-middle font-wide padding-1">
+    <div class="resource-text large-6 flex-container flex-dir-column align-center font-wide padding-1">
+    <div class="metadata margin-bottom-2">
+        <?php $showTitleOption = $this->showTitleOption; ?>
+        <?php if ($showTitleOption == 'item_title'): ?>
+        <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+        <?php elseif ($showTitleOption == 'file_name'): ?>
+        <h3><?php echo $item->link($media->displayTitle()); ?></h3>
+        <?php endif; ?>
+    <?php
+         $date = $item->value('dcterms:date');
+         if ($date):
+         ?>
+      <h3><small><?php echo $date; ?></small></h3>
+      <?php endif; ?>
+      <?php
+         $origin = $item->value('curation:location');
+         if ($origin):
+         ?>
+      <h3><small><?php echo $origin; ?></small></h3>
+      <?php endif; ?>
+      <?php
+         $identifier = $item->value('dcterms:identifier');
+         if ($identifier):
+         ?>
+      <h3><small><?php echo $identifier; ?></small></h3>
+      <?php endif; ?>
+      </div>
+    <div class="text font-wide">
         <?= $html ?>
+    </div>
     </div>
 </div>
