--- a/view/common/block-layout/resource-text-metadata-one.phtml
+++ b/view/common/block-layout/resource-text-metadata-one.phtml
@@ -21,13 +21,13 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text grid-x grid-padding-x full-width padding-2 align-spaced">
+<div class="block media-text grid-x grid-padding-x full-width padding-1 align-spaced">
     <?php if (!empty($heading)): ?>
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
 
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container align-middle">
-        <div class="cell large-6 attachments grid-x flex-container align-center">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container align-spaced">
+        <div class="attachments">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
@@ -76,7 +76,7 @@ $lang = $filterLocale ? $this->lang() : null;
         </div>
     </div>
     <div class="resource-text large-6 flex-container flex-dir-column align-center font-wide padding-1">
-    <div class="metadata margin-bottom-1 separator-center">
+    <div class="metadata margin-bottom-2">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == 'item_title'): ?>
         <h3><?php echo $item->link($item->displayTitle()); ?></h3>
@@ -87,22 +87,22 @@ $lang = $filterLocale ? $this->lang() : null;
          $date = $item->value('dcterms:date');
          if ($date):
          ?>
-      <h3 class="text-center"><small><?php echo $date; ?></small></h3>
+      <h3><small><?php echo $date; ?></small></h3>
       <?php endif; ?>
       <?php
          $origin = $item->value('curation:location');
          if ($origin):
          ?>
-      <h3 class="text-center"><small><?php echo $origin; ?></small></h3>
+      <h3><small><?php echo $origin; ?></small></h3>
       <?php endif; ?>
       <?php
          $identifier = $item->value('dcterms:identifier');
          if ($identifier):
          ?>
-      <h3 class="text-center"><small><?php echo $identifier; ?></small></h3>
+      <h3><small><?php echo $identifier; ?></small></h3>
       <?php endif; ?>
       </div>
-    <div class="text font-wide separator-center">
+    <div class="text font-wide">
         <?= $html ?>
     </div>
     </div>
