--- a/view/common/block-layout/resource-text-full-width.phtml
+++ b/view/common/block-layout/resource-text-full-width.phtml
@@ -26,7 +26,7 @@ $lang = $filterLocale ? $this->lang() : null;
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
 
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container align-spaced">
+    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6">
         <div class="attachments">
             <?php
             foreach ($attachments as $attachment):
