Allowed for <h3> with Resource Text

--- a/view/common/block-layout/resource-text-full-width.phtml
+++ b/view/common/block-layout/resource-text-full-width.phtml
@@ -23,7 +23,9 @@ $lang = $filterLocale ? $this->lang() : null;
 
 <div class="block media-text grid-x grid-padding-x full-width align-center padding-1">
     <?php if (!empty($heading)): ?>
-    <h2><?= $escape($heading) ?></h2>
+    <div class="grid-container cell small-12 margin-bottom-1">
+    <h3><large><?= $escape($heading) ?></large></h3>
+    </div>
     <?php endif; ?>
 
     <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6">
