--- a/view/common/block-layout/resource-text-full-width.phtml
+++ b/view/common/block-layout/resource-text-full-width.phtml
@@ -23,8 +23,8 @@ $lang = $filterLocale ? $this->lang() : null;
 
 <div class="block media-text grid-x grid-padding-x full-width align-center padding-1">
     <?php if (!empty($heading)): ?>
-    <div class="grid-container cell small-12 margin-bottom-1">
-    <h3><large><?= $escape($heading) ?></large></h3>
+    <div class="grid-container cell margin-bottom-1">
+    <h3><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
 
