Changed separator colour to $warning

--- a/asset/scss/_settings.scss
+++ b/asset/scss/_settings.scss
@@ -475,7 +475,7 @@ $prototype-separator-breakpoints: $global-prototype-breakpoints;
 $prototype-separator-align: center;
 $prototype-separator-height: rem-calc(2);
 $prototype-separator-width: 3rem;
-$prototype-separator-background: $primary-color;
+$prototype-separator-background: $warning-color;
 $prototype-separator-margin-top: $global-margin;
 // 40. Prototype Shadow
 // --------------------
