Basic update to Item Showcase block

--- a/view/common/block-layout/item-showcase.phtml
+++ b/view/common/block-layout/item-showcase.phtml
@@ -1,6 +1,6 @@
-<div class="item-showcase">
+<div class="item-showcase flex-container">
 <?php foreach ($attachments as $attachment): ?>
-    <div class="item resource">
+    <div class="item resource margin-2">
     <?php
     $item = $attachment->item();
     if ($item):
