Basic revision to Item Showcase

--- a/view/common/block-layout/item-showcase.phtml
+++ b/view/common/block-layout/item-showcase.phtml
@@ -1,6 +1,6 @@
-<div class="item-showcase flex-container">
+<div class="item-showcase grid-x grid-margin-x grid-margin-y">
 <?php foreach ($attachments as $attachment): ?>
-    <div class="item resource margin-2">
+    <div class="class=item resource cell small-12 medium-6">
     <?php
     $item = $attachment->item();
     if ($item):
