--- a/view/common/block-layout/resource-text-metadata.phtml
+++ b/view/common/block-layout/resource-text-metadata.phtml
@@ -26,8 +26,8 @@ $lang = $filterLocale ? $this->lang() : null;
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
 
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container align-middle">
-        <div class="cell large-6 attachments grid-x flex-container align-center">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container align-middle align-center">
+        <div class="attachments grid-y flex-container align-center">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
@@ -65,7 +65,7 @@ $lang = $filterLocale ? $this->lang() : null;
 
                 $caption = $attachment->caption();
             ?>
-            <div class="item resource">
+            <div class="item resource flex-container align-center">
                 <?= $render ?>
                 <?= $link ?>
                 <div class="caption">
