--- a/asset/scss/_settings.scss
+++ b/asset/scss/_settings.scss
@@ -610,7 +610,7 @@ $tooltip-radius: $global-radius;
 // 55. Top Bar
 // -----------
 $topbar-padding: 0.5rem;
-$topbar-background: $primary-color;
+$topbar-background: $uom-primary;
 $topbar-submenu-background: $topbar-background;
 $topbar-title-spacing: 0.5rem 1rem 0.5rem 0;
 $topbar-input-width: 200px;
