--- a/asset/scss/_settings.scss
+++ b/asset/scss/_settings.scss
@@ -204,7 +204,7 @@ $button-font-family: inherit;
 $button-padding: 0.85em 1em;
 $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
-$button-background: $primary-color;
+$button-background: $uom-secondary;
 $button-background-hover: scale-color($button-background, $lightness: -15%);
 $button-color: $white;
 $button-color-alt: $black;
@@ -569,7 +569,7 @@ $tab-margin: 0;
 $tab-background: $white;
 $tab-color: $primary-color;
 $tab-background-active: $light-gray;
-$tab-active-color: $primary-color;
+$tab-active-color: $uom-secondary;
 $tab-item-font-size: rem-calc(12);
 $tab-item-background-hover: $white;
 $tab-item-padding: 1.25rem 1.5rem;
