--- a/asset/scss/_globals-default.scss
+++ b/asset/scss/_globals-default.scss
@@ -2,14 +2,12 @@
 $global-font-size: 100%;
 $global-width: rem-calc(1140);
 $global-lineheight: 1.5;
-$foundation-palette: ( primary: #1779ba, secondary: #767676, success: #3adb76, warning: #ffae00, alert: #cc4b37);
+$foundation-palette: ( primary: #6b2c91, secondary: #2c0142, success: #3adb76, warning: #ffae00, alert: #cc4b37);
 $light-gray: #ececed;
 $medium-gray: #cacaca;
 $dark-gray: #393a3c;
 $black: #0a0a0a;
 $white: #fefefe;
-$uom-primary: #6b2c91; 
-$uom-secondary: #2c0142;
 $body-background: $white;
 $body-font-color: $black;
 $body-font-family: 'Open Sans', sans-serif;
