--- a/view/common/block-layout/resource-text-metadata-one.phtml
+++ b/view/common/block-layout/resource-text-metadata-one.phtml
@@ -75,8 +75,8 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text large-6 flex-container flex-dir-column align-center font-wide padding-1">
-    <div class="metadata margin-bottom-2">
+    <div class="resource-text large-6 flex-container flex-dir-column align-center padding-1">
+    <div class="metadata margin-bottom-2 separator-center font-wide">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == 'item_title'): ?>
         <h3><?php echo $item->link($item->displayTitle()); ?></h3>
