--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1215,11 +1215,11 @@ body.vertical-menu footer {
   width: 100%;
 
   @include breakpoint(medium) {
-    height: rem-calc(70vh);
+    height: 60vh;
   }
 
   @include breakpoint(large up) {
-    height: rem-calc(75vh);
+    height: 75vh;
     width: 100%;
     object-fit: cover;
   }
