--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1215,11 +1215,19 @@ body.vertical-menu footer {
   width: 100%;
 
   @include breakpoint(medium) {
-    height: 60vh;
+    height: rem-calc(400px);
+    width: 100%;
+    object-fit: cover;
   }
 
-  @include breakpoint(large up) {
-    height: 75vh;
+  @include breakpoint(large) {
+    height: rem-calc(700px);
+    width: 100%;
+    object-fit: cover;
+  }
+
+  @include breakpoint(xxlarge) {
+    height: rem-calc(800px);
     width: 100%;
     object-fit: cover;
   }
