--- a/view/common/block-layout/item-showcase-fixed-img-height.phtml
+++ b/view/common/block-layout/item-showcase-fixed-img-height.phtml
@@ -1,51 +1,52 @@
 <div class="item-showcase grid-x grid-margin-x grid-margin-y">
 <?php foreach ($attachments as $attachment): ?>
     <div class="class=item resource cell small-12 medium-6">
-    <?php
-    $item = $attachment->item();
-    if ($item):
-    ?>
-        <div class="fixed-image-height">
         <?php
-        $media = $attachment->media() ?: $item->primaryMedia();
-        if ($media):
-            echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-        endif;
+        $item = $attachment->item();
+        if ($item):
         ?>
-        </div>
-        <?php $showTitleOption = $this->showTitleOption; ?>
-        <?php if ($showTitleOption == 'item_title'): ?>
-        <h3><?php echo $item->link($item->displayTitle()); ?></h3>
-        <?php elseif ($showTitleOption == 'file_name'): ?>
-        <h3><?php echo $media->displayTitle(); ?></h3>
+            <div class="fixed-image-height">
+                <?php
+                $media = $attachment->media() ?: $item->primaryMedia();
+                if ($media):
+                    echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
+                endif;
+                ?>
+            </div>
+            <div class="metadata margin-bottom-1 separator-center font-wide">
+            <?php $showTitleOption = $this->showTitleOption; ?>
+            <?php if ($showTitleOption == 'item_title'): ?>
+            <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+            <?php elseif ($showTitleOption == 'file_name'): ?>
+            <h3><?php echo $media->displayTitle(); ?></h3>
+            <?php endif; ?>
+            <?php
+            $date = $item->value('dcterms:date');
+            if ($date):
+            ?>
+        <h3><?php echo $date; ?></h3>
         <?php endif; ?>
         <?php
-         $date = $item->value('dcterms:date');
-         if ($date):
-         ?>
-      <h3><small><?php echo $date; ?></small></h3>
-      <?php endif; ?>
-      <?php
-         $origin = $item->value('curation:location');
-         if ($origin):
-         ?>
-      <h3><small><?php echo $origin; ?></small></h3>
-      <?php endif; ?>
-      <?php
-         $identifier = $item->value('dcterms:identifier');
-         if ($identifier):
-         ?>
-      <h3><small><?php echo $identifier; ?></small></h3>
-      <?php endif; ?>
-      </div>
-    <?php endif; ?>
+            $origin = $item->value('curation:location');
+            if ($origin):
+            ?>
+        <h3><?php echo $origin; ?></h3>
+        <?php endif; ?>
+        <?php
+            $identifier = $item->value('dcterms:identifier');
+            if ($identifier):
+            ?>
+        <h3><?php echo $identifier; ?></h3>
+        <?php endif; ?>
+        </div>
+        <?php endif; ?>
 
-    <?php
-    $caption = $attachment->caption();
-    if ($caption):
-    ?>
-        <div class="caption"><?php echo $caption; ?></div>
-    <?php endif; ?>
+        <?php
+        $caption = $attachment->caption();
+        if ($caption):
+        ?>
+            <div class="caption"><?php echo $caption; ?></div>
+        <?php endif; ?>
     </div>
 <?php endforeach; ?>
 </div>
