Revised Item Show
Removed height: 60vh as metadata was overlapping viewer

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -744,9 +744,13 @@ body.vertical-menu footer {
     margin-right: .25 * $global-margin;
 }
 
-#itemfiles.topgallery,
 #itemfiles.leftgallery {
   height: 60vh;
+  width: 100%;
+  margin-bottom: $global-margin;
+}
+
+#itemfiles.topgallery {
   width: 100%;
   margin-bottom: $global-margin;
 }
