--- a/asset/scss/_settings.scss
+++ b/asset/scss/_settings.scss
@@ -242,7 +242,7 @@ $callout-link-tint: 30%;
 // --------
 $card-background: $white;
 $card-font-color: $body-font-color;
-$card-divider-background: $light-gray;
+$card-divider-background: $dark-gray;
 $card-border: 1px solid $light-gray;
 $card-shadow: none;
 $card-border-radius: $global-radius;
