Revised Item Listing with Introduction block

--- a/asset/scss/_globals-default.scss
+++ b/asset/scss/_globals-default.scss
@@ -6,6 +6,7 @@ $foundation-palette: ( primary: #6b2c91, secondary: #2c0142, success: #3adb76, w
 $light-gray: #ececed;
 $medium-gray: #cacaca;
 $dark-gray: #393a3c;
+$uom-footer: #1d1d1d;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
