--- a/view/common/block-layout/item-listing.phtml
+++ b/view/common/block-layout/item-listing.phtml
@@ -16,7 +16,7 @@
     <?php endif; ?>
 
     <?php foreach ($attachments as $attachment): ?>
-        <div class="large-7 item resource item-listing">
+        <div class="large-7 item resource item-listing-image">
             <?php
             $item = $attachment->item();
             if ($item):
