--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1233,8 +1233,11 @@ nav.title-bar {
 /*Item Listing with Introduction Block*/
 .item-listing {
     position: relative;
-    margin-top: (-2 * $global-padding);
     overflow: hidden;
+    margin-top: (-1 * $global-padding);
+    @include breakpoint(medium) {
+        margin-top: (-2 * $global-padding);
+    }
 }
 
 .item-listing h1 {
@@ -1243,11 +1246,28 @@ nav.title-bar {
 }
 
 .item-listing img {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    max-height: 60vh;
     object-fit: cover;
     object-position: center;
     aspect-ratio: 1;
+    @include breakpoint(medium) {
+        height: 100%;
+    }
+    @include breakpoint(large) {
+        max-height: 100vh;
+    }
+    @include breakpoint(xlarge) {
+        width: 100%;
+        max-height: 80vh;
+    }
+}
+
+.title-area {
+    order: 1;
+    @include breakpoint(large) {
+        order: 0;
+    }
 }
 
 .item-listing .title-area,
