--- a/view/common/block-layout/resource-text-metadata-one.phtml
+++ b/view/common/block-layout/resource-text-metadata-one.phtml
@@ -21,11 +21,12 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text grid-x grid-padding-x full-width padding-1 align-spaced">
+<div class="block media-text grid-x grid-padding-x full-width-css padding-1 align-spaced">
     <?php if (!empty($heading)): ?>
+    <div class="media-text-heading">
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
-
+    </div>
     <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container align-spaced">
         <div class="attachments">
             <?php
