--- a/view/common/block-layout/homepage-splash.phtml
+++ b/view/common/block-layout/homepage-splash.phtml
@@ -1,4 +1,4 @@
-<div id="homepage-splash" class="full-width grid-x grid-padding-x margin-bottom-1 flex-container block-<?php echo $this->blockId; ?> region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="homepage-splash" class="full-width-css grid-x grid-padding-x margin-bottom-1 flex-container block-<?php echo $this->blockId; ?> region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <div class="large-7 item-listing-image items">
         <?php foreach ($attachments as $attachment): ?>
             <?php
